--- a/males.html
+++ b/males.html
@@ -9,7 +9,90 @@
 <link rel="stylesheet" type="text/css" href="css/style.css"/>
 <link rel="icon" href="/images/favicon.png" type="image/png" />
 <link rel="shortcut icon" href="/favicon.ico" />
-</head>
+<script src="js/jquery-1.8.3.min.js" type="text/javascript"></script>
+<script type="text/javascript">
+$(function() {
+    $("img#panic_thumb1")
+        .mouseover(function() { 
+            $("img#panic_main").attr("src", "males/panic1.jpg");
+        })
+        .mouseout(function() {
+            $("img#panic_main").attr("src", "males/panic2.jpg");
+        });
+    $("img#panic_thumb2")
+        .mouseover(function() { 
+            $("img#panic_main").attr("src", "males/panic_for_m.jpg");
+        })
+        .mouseout(function() {
+            $("img#panic_main").attr("src", "males/panic2.jpg");
+        });
+    $("img#panic_thumb3")
+        .mouseover(function() { 
+            $("img#panic_main").attr("src", "males/panic5.jpg");
+        })
+        .mouseout(function() {
+            $("img#panic_main").attr("src", "males/panic2.jpg");
+        });
+
+    $("img#eclare_thumb1")
+        .mouseover(function() { 
+            $("img#eclare_main").attr("src", "males/eclare2.jpg");
+        })
+        .mouseout(function() {
+            $("img#eclare_main").attr("src", "males/eclare1.jpg");
+        });
+    $("img#eclare_thumb2")
+        .mouseover(function() { 
+            $("img#eclare_main").attr("src", "males/eclare3.jpg");
+        })
+        .mouseout(function() {
+            $("img#eclare_main").attr("src", "males/eclare1.jpg");
+        });
+    $("img#eclare_thumb3")
+        .mouseover(function() { 
+            $("img#eclare_main").attr("src", "males/eclar4.jpg");
+        })
+        .mouseout(function() {
+            $("img#eclare_main").attr("src", "males/eclare1.jpg");
+        });
+
+
+    $("img#flash_thumb1")
+        .mouseover(function() { 
+            $("img#flash_main").attr("src", "males/flash_1.jpg");
+        })
+        .mouseout(function() {
+            $("img#flash_main").attr("src", "males/flash_for_males.jpg");
+        });
+    $("img#flash_thumb2")
+        .mouseover(function() { 
+            $("img#flash_main").attr("src", "males/flash_2.jpg");
+        })
+        .mouseout(function() {
+            $("img#flash_main").attr("src", "males/flash_for_males.jpg");
+        });
+    $("img#flash_thumb3")
+        .mouseover(function() { 
+            $("img#flash_main").attr("src", "males/flash_3.jpg");
+        })
+        .mouseout(function() {
+            $("img#flash_main").attr("src", "males/flash_for_males.jpg");
+        });
+});
+</script>
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-36595643-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script></head>
 
 <body>
 <div id="main">
@@ -41,39 +124,72 @@
 </div>
 </div>
 <div id="content">
-<!--Devon Rex_photo-->
-<p>
-<h3 style="margin-left:400px"> <a href="#dr">Devon Rex</a> </h3>
-<img src="images/eclare.jpg"alt="Eclare" width="400" height="400" align="left" style="margin-right:20px" />
-Hi, Im Erica Lastauskiene.<br/>
-I live in a pretty village on the east coast of Ireland, near the sea.<br/>
-My interest in cats began four years ago. I always loved pets. I used to have dogs, but my partner developed an allergy to them, therefore we had to give the dogs to my parents. Understandably we were upset to let the dogs go.<br/>
-I decided to investigate what alternative pet options we might have. <br/>
-We discovered a hairless Canadian Sphinx cat, which completely stole our hearts!!!!<br/>
-<img src="images/tom_cat.jpg"alt="tom" width="400" height="400" align="right" style="margin-left:20px" /> 
- We had our first Sphinx and she performed very well                 in shows...<br/>
- However, at one particular show I was stopped in my tracks, when there appeared before me a little miracle!!!<br/>
-A little Elfe with big eyes, big ears, nice curly coat was looking at me.<br/>
-I sad: "Oh, my God! Who is that?!"<br/>
-Since that day we began our adventure with the 
-Devon Rex
-breed - we commenced our search for a kitten...<br/>
-Since Lola (our first kitten) arrived, I realised that one would not be enough.<br/>
-<img src="images/faraon.jpg"alt="Faraon" width="400" height="400" align="left" style="margin-right:20px" /> 
-Devon Rex became our family obsession.<br/>
-They have become a part of our family and are loved by everyone. They are happy, healthy, playful and they are a joy to all.<br/>
-<h5><a name="dr">Devon Rex</a></h5>
- <p>A bit about Devon Rex breed:<br/>
- The Devon Rex is a breed of cat with a curly, very soft short coat similar to that of the Cornish Rex. They are often associated with being one of the most hypo-allergenic cats available because of their type of coat.
 
-The first Devon was discovered by Beryl Cox in Buckfastleigh, Devon, UK in 1960.<br/>
-Devons, which are medium sized cats, are often called "pixie cats" or "alien cats" because of their unique appearance. Their uncommonly large ears are set low on the sides of their wide heads, their eyes are large, and their noses are slightly upturned. Unlike most cats, their whiskers are very short and often curled to such an extent that it may appear as if they have no whiskers. Their body type is distinctly lightly built. Their long, sturdy legs are well suited for long leaps, and their toes are unusually large. Devon Rex cats come in all colors. The ears are large and slightly rounded.<br/>
-The typical Devon is active, mischievous, playful, and very people-oriented. They have been described as a cross between a cat, a dog and a monkey (or, more famously, as "a monkey in a cat suit").They are a very intelligent breed; the typical Devon Rex can be trained to walk on a leash, fetch or perform all manner of tricks usually associated with canines, like jump, heel and tag to name a few.
-The Devon Rex is a faithful companion and will usually follow the object of their affection from room to room, waiting for the opportunity to leap onto their arms, lap, or shoulder. </p>
+<div class="cat">
+	<div class="gallery">
+		<img id="panic_main" src="males/panic2.jpg" />
+		<ul>
+			<li><img id="panic_thumb1" src="males/panic1_s.jpg" /></li>
+			<li><img id="panic_thumb2" src="males/panic_4m_s.jpg" /></li>
+			<li><img id="panic_thumb3" src="males/panic5_s.jpg" /></li>
+		</ul>
+	</div>
+	<div class="bio">
+		<h1>Panic</h1>
+		<ul>
+			<li><span class="label">Sire:</span> Alexandroff Phocus-Pocus</li>
+			<li><span class="label">Dam:</span> Bijou Arnikor*PL </li>
+			<li><span class="label">DoB:</span> 2 Oct 2010</li> 
+			<li><span class="label">Color:</span>  Red Bi-Colour</li>
+			<li><span class="label">Blood Type:</span> B</li>
+		</ul>
+		</div>
+</div>
 
-<a href="http://en.wikipedia.org/wiki/Devon_rex" target="_blank">Click here to read more about Devon Rex on Wiki</a>
+<div class="cat">
+	<div class="gallery">
+		<img id="eclare_main" src="males/eclare1.jpg" />
+		<ul>
+			<li><img id="eclare_thumb1" src="males/eclare2_s.jpg" /></li>
+			<li><img id="eclare_thumb2" src="males/eclare3_S.jpg" /></li>
+			<li><img id="eclare_thumb3" src="males/eclar4S.jpg" /></li>
+		</ul>
+	</div>
+	<div class="bio">
+		<h1>Eclare</h1>
+		<ul>
+			<li><span class="label">Father:</span> <a href="#panic">PL Agubamka Domalien (Panic)</a></li>
+			<li><span class="label">Mother:</span> </li>
+			<li><span class="label">DoB:</span> </li> 
+			<li><span class="label">Color:</span>  Black Smoke</li>
+			<li><span class="label">Blood Type:</span> </li>
+		</ul>
+		<h2>Litters</h2> 
+	</div>
+</div>
 
-<hr/>
+<div class="cat">
+	<div class="gallery">
+		<img id="flash_main" src="males/flash_for_males.jpg" />
+		<ul>
+			<li><img id="flash_thumb1" src="males/flash_1_s.jpg" /></li>
+			<li><img id="flash_thumb2" src="males/flash_2_s.jpg" /></li>
+			<li><img id="flash_thumb3" src="males/flash_3s.jpg" /></li>
+		</ul>
+	</div>
+	<div class="bio">
+		<h1>Flash</h1>
+		<ul>
+			<li><span class="label">Father:</span> <a href="#panic">PL Agubamka Domalien (Panic)</a></li>
+			<li><span class="label">Mother:</span> </li>
+			<li><span class="label">DoB:</span> </li> 
+			<li><span class="label">Color:</span>  Black Smoke</li>
+			<li><span class="label">Blood Type:</span> </li>
+		</ul>
+		<h2>Litters</h2> 
+	</div>
+</div>
+
 </div>
 <div id="footer-container">
 <div id="footer">
