Work in progress

--- a/females.html
+++ b/females.html
@@ -111,12 +111,13 @@ $(function() {
 
 <table id="menu" border="1" width="960" style="background-color:darkgreen">
 
-<tr style="height:26px">
-<th><a href="index.html">HOME</a> </th>
-<th style="><a href="males.html" style="background-color:#105005;color:darkgray">MALES</a></th>
-<th><a href="females.html">FEMALES</a></th> 
-<th><a href="kittens.html">KITTENS</a></th>
-<th><a href="gallery.html">GALLERY</a></th> 
+<tr>
+<th style="width:160px;height:26px;"><a href="home_cats.html">HOME</a> </th>
+<th>
+<a href="males.html"> Males</a> </th>
+<th><a href="females.html">Females</a></th> 
+<th style="background-color:#105005"> <a href="kittens.html" style="color:darkgray">KITTENS</a></th>
+<th><a href="gallery.html">GALLERY</a> </th> 
 
 </tr>
 </table>
@@ -134,7 +135,7 @@ $(function() {
 		</ul>
 	</div>
 	<div class="bio">
-		<h1>PL* Agubamka Domalien (Panek)</h1>
+		<h1>Panic</h1>
 		<ul>
 			<li><span class="label">Sire:</span> Alexandroff Phocus-Pocus</li>
 			<li><span class="label">Dam:</span> Bijou Arnikor*PL </li>
@@ -147,7 +148,7 @@ $(function() {
 
 <div class="cat">
 	<div class="gallery">
-		<img id="eclare_main" src="males/eclare.jpg" />
+		<img id="eclare_main" src="males/eclare1.jpg" />
 		<ul>
 			<li><img id="eclare_thumb1" src="males/eclare2_s.jpg" /></li>
 			<li><img id="eclare_thumb2" src="males/eclare3_S.jpg" /></li>
@@ -155,13 +156,13 @@ $(function() {
 		</ul>
 	</div>
 	<div class="bio">
-		<h1>CelticElfes Eclare</h1>
+		<h1>Eclare</h1>
 		<ul>
-			<li><span class="label">Father:</span> <a href="#panic">PL* Agubamka Domalien (Panek)</a></li>
-			<li><span class="label">Mother:</span><a href="#hanna">Rogus Bessie Basset (Hanna)</a> </li>
-			<li><span class="label">DoB:</span>07 June 2012 </li> 
-			<li><span class="label">Color:</span>  Red Bi-color</li>
-			<li><span class="label">Blood Type:</span>B </li>
+			<li><span class="label">Father:</span> <a href="#panic">PL Agubamka Domalien (Panic)</a></li>
+			<li><span class="label">Mother:</span> </li>
+			<li><span class="label">DoB:</span> </li> 
+			<li><span class="label">Color:</span>  Black Smoke</li>
+			<li><span class="label">Blood Type:</span> </li>
 		</ul>
 		<h2>Litters</h2> 
 	</div>
@@ -178,7 +179,7 @@ $(function() {
 	</div>
 	<div class="bio">
 		<h1>Flash</h1>
-		<ul
+		<ul>
 			<li><span class="label">Father:</span> <a href="#panic">PL Agubamka Domalien (Panic)</a></li>
 			<li><span class="label">Mother:</span> </li>
 			<li><span class="label">DoB:</span> </li> 
