--- a/index.html
+++ b/index.html
@@ -43,12 +43,11 @@
 
 <table id="menu" border="1" width="960" style="background-color:darkgreen">
 
-<tr>
-<th style="width:160px;height:26px;"><a href="home_cats.html">HOME</a> </th>
-<th>
-<a href="males.html"> Males</a> </th>
+<tr style="height:26px">
+<th style="background-color:#105005;color:darkgray"><a href="index.html">HOME</a> </th>
+<th><a href="males.html">Males</a> </th>
 <th><a href="females.html">Females</a></th> 
-<th style="background-color:#105005"> <a href="kittens.html" style="color:darkgray">KITTENS</a></th>
+<th><a href="kittens.html">KITTENS</a></th>
 <th><a href="gallery.html">GALLERY</a> </th> 
 
 </tr>
@@ -64,9 +63,9 @@ Hi, Im Erica Lastauskiene.<br/>
 I live in a pretty village on the east coast of Ireland, near the sea.<br/>
 My interest in cats began four years ago. I always loved pets. I used to have dogs, but my partner developed an allergy to them, therefore we had to give the dogs to my parents. Understandably we were upset to let the dogs go.<br/>
 I decided to investigate what alternative pet options we might have. <br/>
-We discovered a hairless Canadian Sphinx cat, which completely stole our hearts!!!!<br/>
-<img src="images/tom_cat.jpg"alt="tom" width="400" height="400" align="right" style="margin-left:20px" /> 
+We discovered a hairless Canadian Sphynx cat, which completely stole our hearts!!!!<br/>
  We had our first Sphinx and she performed very well                 in shows...<br/>
+<img src="images/tom_cat.jpg"alt="tom" width="400" height="400" align="right" style="margin-left:20px" /> 
  However, at one particular show I was stopped in my tracks, when there appeared before me a little miracle!!!<br/>
 A little Elfe with big eyes, big ears, nice curly coat was looking at me.<br/>
 I sad: "Oh, my God! Who is that?!"<br/>
@@ -86,24 +85,27 @@ The first Devon was discovered by Beryl Cox in Buckfastleigh, Devon, UK in 1960.
  Devons, which are medium sized cats, are often called "pixie cats" or "alien cats" because of their unique appearance. Their uncommonly large ears are set low on the sides of their wide heads, their eyes are large, and their noses are slightly upturned. Unlike most cats, their whiskers are very short and often curled to such an extent that it may appear as if they have no whiskers. Their body type is distinctly lightly built. Their long, sturdy legs are well suited for long leaps, and their toes are unusually large. Devon Rex cats come in all colors. The ears are large and slightly rounded.<br/>
 The typical Devon is active, mischievous, playful, and very people-oriented. They have been described as a cross between a cat, a dog and a monkey (or, more famously, as "a monkey in a cat suit").They are a very intelligent breed; the typical Devon Rex can be trained to walk on a leash, fetch or perform all manner of tricks usually associated with canines, like jump, heel and tag to name a few.
 The Devon Rex is a faithful companion and will usually follow the object of their affection from room to room, waiting for the opportunity to leap onto their arms, lap, or shoulder. </p>
-<img src="images/eclipse.jpg"alt="tom" width="400" height="400" align="right" style="margin-left:20px" />
-<a href="http://en.wikipedia.org/wiki/Devon_rex" target="_blank">Click here to read more about Devon Rex on Wiki</a>
-
-<hr/>
+<img src="males/panic3.jpg" style="clear:both;padding-left:120px;padding-right:120px" />
+<p style="text-align:center">
+<a href="http://en.wikipedia.org/wiki/Devon_rex" target="_blank">Click here to read more about Devon Rex on Wikipedia</a>
+</p>
 </div>
 <div id="footer-container">
 <div id="footer">
 <table>
-<tr style="background-color:#333; font-size:15px; height:17px">
+<tr style="background-color:#333; font-size:15px; height:15px">
 
 <!-- anchor to top of page --> 
-<td>&copy; Celtic Elfes</td>
+<td>&copy; 2012 Celtic Elfes</td>
+<td>
+<a href="mailto:info@celticelfes.com?Subject=Devon%20Rex">
+Send Mail</a></td>
 <td>
 <a href="http://www.facebook.com/#!/lastauskiene?fref=ts" target="_blank">
-<img border="0" src="images/fb.jpg" alt="FB" width="32" height="32" />
+<img border="0" src="images/fb.jpg" alt="FB" width="20" height="20" />
 </a>
 </td>
-<td>Designed by alien_masha</td>
+<td align="right">Designed by alien_masha</td>
 </tr>
 
 </table>
