Clean up of <head/> and header

--- a/gallery.html
+++ b/gallery.html
@@ -2,10 +2,11 @@
 <html>
 
 <head
-<meta name="keywords" content="Devon,Rex" />
-<title style="font-family:arial;color:black;font-size:80px;"> Devon Rex Ireland</title>
-
-<link rel="stylesheet" type="text/css" href="gallery.css"/>
+<meta name="description" content="Breeder of Devon Rex and Sphynx cats in Ireland" />
+<title>Devon Rex Ireland | Gallery</title>
+<link rel="stylesheet" type="text/css" href="css/style.css"/>
+<link rel="icon" href="/images/favicon.png" type="image/png" />
+<link rel="shortcut icon" href="/favicon.ico" />
 
 <script type="text/javascript">
 
@@ -29,24 +30,19 @@
 <!-- need to put in the picture and logo on top of the table-->
 <div id="header-wrap">
 <div id="header-container">
-
-<table id="banner" border="0" style="background-color:dimgrey">
+<table id="banner" border="0">
 <tr>
-<th style="width:700px;"><img src="banner.jpg" width="750" height="150"/> </th>
-<th><img src="kittens_green.jpg" alt="CelticElfes" width="200" height="150"/> </th>
+<th id="logo"><img src="images/banner.jpg"/> </th>
+<th id="picture"><img src="images/kittens_green.jpg" alt="CelticElfes"/></th>
 </tr>
 </table>
-
-<table id="menu" border="1" width="960" style="background-color:darkgreen">
-
+<table id="menu" border="1">
 <tr>
-<th style="width:160px;height:26px;"><a href="home_cats.html">Home</a> </th>
-<th>
-<a href="males.html"> <img src="males.png" border="0" alt="Males"/> </a> </th>
-<th><a href="females.html">FEMALES</a></th> 
-<th style="background-color:#105005"><a href="kittens.html">KITTENS</a></th>
-<th><a href="gallery.html">GALLERY</a> </th> 
-
+<th><a href="index.html">HOME</a> </th>
+<th><a href="males.html">MALES</a> </th>
+<th><a href="females.html">FEMALES</a></th>
+<th><a href="kittens.html">KITTENS</a></th>
+<th class="selected"><a href="gallery.html">GALLERY</a> </th>
 </tr>
 </table>
 </div>
@@ -57,10 +53,10 @@
 <img src="gallery_1.jpg"alt="Eclare"/>
 <p style="color:#F0E68C" "font-size:30px">
 catcat cat catcat cat catcat cat catcat cat cat 10.10.2010</p>
-</div> 
+</div>
 <div class="picture">
 <img src="gallery_1.jpg"alt="Eclare"/>
-<p style="color:#F0E68C"; "font-size:30px"> dog dog dog </p>
+<p style="color:#F0E68C;font-size:30px"> dog dog dog </p>
 </div>
 </div>
 <div class="picture">
@@ -71,7 +67,7 @@ catcat cat catcat cat catcat cat catcat cat cat 10.10.2010</p>
 <table>
 <tr style="background-color:#333; font-size:10px; height:15px">
 
-<!-- anchor to top of page --> 
+<!-- anchor to top of page -->
 <td>&copy; Celtic Elfes</td>
 <td>No border around the image, but still a link:
 <a href="http://www.facebook.com/#!/lastauskiene?fref=ts">
