--- a/kittens.html
+++ b/kittens.html
@@ -2,10 +2,11 @@
 <html>
 
 <head
-<meta name="keywords" content="Devon,Rex" />
-<title style="font-family:arial;color:black;font-size:80px;"> Devon Rex Ireland</title>
-
+<meta name="description" content="Breeder of Devon Rex and Sphynx cats in Ireland" />
+<title>Devon Rex Ireland | Kittens</title>
 <link rel="stylesheet" type="text/css" href="css/style.css"/>
+<link rel="icon" href="/images/favicon.png" type="image/png" />
+<link rel="shortcut icon" href="/favicon.ico" />
 
 <script type="text/javascript">
 
@@ -27,29 +28,24 @@
 <!-- need to put in the picture and logo on top of the table-->
 <div id="header-wrap">
 <div id="header-container">
-
-<table id="banner" border="0" style="background-color:dimgrey">
+<table id="banner" border="0">
 <tr>
-<th style="width:700px;"><img src="banner.jpg" width="750" height="150"/> </th>
-<th><img src="kittens_green.jpg" alt="CelticElfes" width="200" height="150"/> </th>
+<th id="logo"><img src="images/banner.jpg"/> </th>
+<th id="picture"><img src="images/kittens_green.jpg" alt="CelticElfes"/></th>
 </tr>
 </table>
-
-
-<table id="menu" border="1" width="960" style="background-color:darkgreen">
-
+<table id="menu" border="1">
 <tr>
-<th style="width:160px;height:26px;"><a href="home_cats.html">Home</a> </th>
-<th>
-<a href="males.html"> <img src="males.png" border="0" alt="Males"/> </a> </th>
-<th><a href="females.html">FEMALES</a></th> 
-<th style="background-color:#105005"><a href="kittens.html">KITTENS</a></th>
-<th><a href="gallery.html">GALLERY</a> </th> 
-
+<th><a href="index.html">HOME</a> </th>
+<th><a href="males.html">MALES</a> </th>
+<th><a href="females.html">FEMALES</a></th>
+<th class="selected"><a href="kittens.html">KITTENS</a></th>
+<th><a href="gallery.html">GALLERY</a> </th>
 </tr>
 </table>
 </div>
 </div>
+
 <div id="content">
 <!--Devon Rex_photo-->
 <img src="images/fenix.jpg"alt="Eclare" width="400" height="400" align="left" style="margin-right:20px" />
@@ -63,7 +59,7 @@ color is nice, and two eyes</p>
 <table>
 <tr style="background-color:#333; font-size:10px; height:15px">
 
-<!-- anchor to top of page --> 
+<!-- anchor to top of page -->
 <td>&copy; Celtic Elfes</td>
 <td>
 <a href="http://www.facebook.com/#!/lastauskiene?fref=ts" target="_blank">
