--- a/males.html
+++ b/males.html
@@ -2,32 +2,31 @@
 <html>
 
 <head
-<meta name="keywords" content="Devon,Rex" />
-<title style="font-family:arial;color:black;font-size:80px;"> Devon Rex Ireland</title>
-
-
+<meta name="description" content="Breeder of Devon Rex and Sphynx cats in Ireland" />
+<title>Devon Rex Ireland | Males</title>
 <link rel="stylesheet" type="text/css" href="css/style.css"/>
 <link rel="icon" href="/images/favicon.png" type="image/png" />
 <link rel="shortcut icon" href="/favicon.ico" />
+
 <script src="js/jquery-1.8.3.min.js" type="text/javascript"></script>
 <script type="text/javascript">
 $(function() {
     $("img#panic_thumb1")
-        .mouseover(function() { 
+        .mouseover(function() {
             $("img#panic_main").attr("src", "males/panic1.jpg");
         })
         .mouseout(function() {
             $("img#panic_main").attr("src", "males/panic2.jpg");
         });
     $("img#panic_thumb2")
-        .mouseover(function() { 
+        .mouseover(function() {
             $("img#panic_main").attr("src", "males/panic_for_m.jpg");
         })
         .mouseout(function() {
             $("img#panic_main").attr("src", "males/panic2.jpg");
         });
     $("img#panic_thumb3")
-        .mouseover(function() { 
+        .mouseover(function() {
             $("img#panic_main").attr("src", "males/panic5.jpg");
         })
         .mouseout(function() {
@@ -35,21 +34,21 @@ $(function() {
         });
 
     $("img#eclare_thumb1")
-        .mouseover(function() { 
+        .mouseover(function() {
             $("img#eclare_main").attr("src", "males/eclare2.jpg");
         })
         .mouseout(function() {
             $("img#eclare_main").attr("src", "males/eclare1.jpg");
         });
     $("img#eclare_thumb2")
-        .mouseover(function() { 
+        .mouseover(function() {
             $("img#eclare_main").attr("src", "males/eclare3.jpg");
         })
         .mouseout(function() {
             $("img#eclare_main").attr("src", "males/eclare1.jpg");
         });
     $("img#eclare_thumb3")
-        .mouseover(function() { 
+        .mouseover(function() {
             $("img#eclare_main").attr("src", "males/eclar4.jpg");
         })
         .mouseout(function() {
@@ -58,21 +57,21 @@ $(function() {
 
 
     $("img#flash_thumb1")
-        .mouseover(function() { 
+        .mouseover(function() {
             $("img#flash_main").attr("src", "males/flash_1.jpg");
         })
         .mouseout(function() {
             $("img#flash_main").attr("src", "males/flash_for_males.jpg");
         });
     $("img#flash_thumb2")
-        .mouseover(function() { 
+        .mouseover(function() {
             $("img#flash_main").attr("src", "males/flash_2.jpg");
         })
         .mouseout(function() {
             $("img#flash_main").attr("src", "males/flash_for_males.jpg");
         });
     $("img#flash_thumb3")
-        .mouseover(function() { 
+        .mouseover(function() {
             $("img#flash_main").attr("src", "males/flash_3.jpg");
         })
         .mouseout(function() {
@@ -100,28 +99,24 @@ $(function() {
 <!-- need to put in the picture and logo on top of the table-->
 <div id="header-wrap">
 <div id="header-container">
-
-<table id="banner" border="0" style="background-color:dimgrey">
+<table id="banner" border="0">
 <tr>
-<th style="width:700px;"><img src="images/banner.jpg" width="750" height="150"/> </th>
-<th><img src="images/kittens_green.jpg" alt="CelticElfes" width="200" height="150"/> </th>
+<th id="logo"><img src="images/banner.jpg"/> </th>
+<th id="picture"><img src="images/kittens_green.jpg" alt="CelticElfes"/></th>
 </tr>
 </table>
-
-
-<table id="menu" border="1" width="960" style="background-color:darkgreen">
-
-<tr style="height:26px">
+<table id="menu" border="1">
+<tr>
 <th><a href="index.html">HOME</a> </th>
-<th style="><a href="males.html" style="background-color:#105005;color:darkgray">MALES</a></th>
-<th><a href="females.html">FEMALES</a></th> 
+<th class="selected"><a href="males.html">MALES</a> </th>
+<th><a href="females.html">FEMALES</a></th>
 <th><a href="kittens.html">KITTENS</a></th>
-<th><a href="gallery.html">GALLERY</a></th> 
-
+<th><a href="gallery.html">GALLERY</a> </th>
 </tr>
 </table>
 </div>
 </div>
+
 <div id="content">
 
 <div class="cat">
@@ -138,7 +133,7 @@ $(function() {
 		<ul>
 			<li><span class="label">Sire:</span> Alexandroff Phocus-Pocus</li>
 			<li><span class="label">Dam:</span> Bijou Arnikor*PL </li>
-			<li><span class="label">DoB:</span> 2 Oct 2010</li> 
+			<li><span class="label">DoB:</span> 2 Oct 2010</li>
 			<li><span class="label">Color:</span>  Red Bi-Colour</li>
 			<li><span class="label">Blood Type:</span> B</li>
 		</ul>
@@ -159,11 +154,11 @@ $(function() {
 		<ul>
 			<li><span class="label">Father:</span> <a href="#panic">PL* Agubamka Domalien (Panek)</a></li>
 			<li><span class="label">Mother:</span><a href="#hanna">Rogus Bessie Basset (Hanna)</a> </li>
-			<li><span class="label">DoB:</span>07 June 2012 </li> 
+			<li><span class="label">DoB:</span>07 June 2012 </li>
 			<li><span class="label">Color:</span>  Red Bi-color</li>
 			<li><span class="label">Blood Type:</span>B </li>
 		</ul>
-		<h2>Litters</h2> 
+		<h2>Litters</h2>
 	</div>
 </div>
 
@@ -181,11 +176,11 @@ $(function() {
 		<ul
 			<li><span class="label">Father:</span> <a href="#panic">PL Agubamka Domalien (Panic)</a></li>
 			<li><span class="label">Mother:</span> </li>
-			<li><span class="label">DoB:</span> </li> 
+			<li><span class="label">DoB:</span> </li>
 			<li><span class="label">Color:</span>  Black Smoke</li>
 			<li><span class="label">Blood Type:</span> </li>
 		</ul>
-		<h2>Litters</h2> 
+		<h2>Litters</h2>
 	</div>
 </div>
 
@@ -195,7 +190,7 @@ $(function() {
 <table>
 <tr style="background-color:#333; font-size:15px; height:17px">
 
-<!-- anchor to top of page --> 
+<!-- anchor to top of page -->
 <td>&copy; Celtic Elfes</td>
 <td>
 <a href="http://www.facebook.com/#!/lastauskiene?fref=ts" target="_blank">
