--- a/index.html
+++ b/index.html
@@ -2,10 +2,8 @@
 <html>
 
 <head
-<meta name="keywords" content="Devon,Rex" />
-<title style="font-family:arial;color:black;font-size:80px;"> Devon Rex Ireland</title>
-
-
+<meta name="description" content="Breeder of Devon Rex and Sphynx cats in Ireland" />
+<title>Devon Rex Ireland</title>
 <link rel="stylesheet" type="text/css" href="css/style.css"/>
 <link rel="icon" href="/images/favicon.png" type="image/png" />
 <link rel="shortcut icon" href="/favicon.ico" />
@@ -30,30 +28,27 @@
 <div id="main">
 <!-- anythink in the body is displayed on the webpage-->
 <!-- need to put in the picture and logo on top of the table-->
+
 <div id="header-wrap">
 <div id="header-container">
-
-<table id="banner" border="0" style="background-color:dimgrey">
+<table id="banner" border="0">
 <tr>
-<th style="width:700px;"><img src="images/banner.jpg" width="750" height="150"/> </th>
-<th><img src="images/kittens_green.jpg" alt="CelticElfes" width="200" height="150"/> </th>
+<th id="logo"><img src="images/banner.jpg"/> </th>
+<th id="picture"><img src="images/kittens_green.jpg" alt="CelticElfes"/></th>
 </tr>
 </table>
-
-
-<table id="menu" border="1" width="960" style="background-color:darkgreen">
-
-<tr style="height:26px">
-<th style="background-color:#105005;color:darkgray"><a href="index.html">HOME</a> </th>
-<th><a href="males.html">Males</a> </th>
-<th><a href="females.html">Females</a></th> 
+<table id="menu" border="1">
+<tr>
+<th class="selected"><a href="index.html">HOME</a> </th>
+<th><a href="males.html">MALES</a> </th>
+<th><a href="females.html">FEMALES</a></th>
 <th><a href="kittens.html">KITTENS</a></th>
-<th><a href="gallery.html">GALLERY</a> </th> 
-
+<th><a href="gallery.html">GALLERY</a> </th>
 </tr>
 </table>
 </div>
 </div>
+
 <div id="content">
 <!--Devon Rex_photo-->
 <p>
@@ -65,15 +60,15 @@ My interest in cats began four years ago. I always loved pets. I used to have do
 I decided to investigate what alternative pet options we might have. <br/>
 We discovered a hairless Canadian Sphynx cat, which completely stole our hearts!!!!<br/>
  We had our first Sphinx and she performed very well                 in shows...<br/>
-<img src="images/tom_cat.jpg"alt="tom" width="400" height="400" align="right" style="margin-left:20px" /> 
+<img src="images/tom_cat.jpg"alt="tom" width="400" height="400" align="right" style="margin-left:20px" />
  However, at one particular show I was stopped in my tracks, when there appeared before me a little miracle!!!<br/>
 A little Elfe with big eyes, big ears, nice curly coat was looking at me.<br/>
 I sad: "Oh, my God! Who is that?!"<br/>
-Since that day we began our adventure with the 
+Since that day we began our adventure with the
 Devon Rex
 breed - we commenced our search for a kitten...<br/>
 Since Lola (our first kitten) arrived, I realised that one would not be enough.<br/>
-<img src="images/faraon.jpg"alt="Faraon" width="400" height="400" align="left" style="margin-right:20px" /> 
+<img src="images/faraon.jpg"alt="Faraon" width="400" height="400" align="left" style="margin-right:20px" />
 Devon Rex became our family obsession.<br/>
 They have become a part of our family and are loved by everyone. They are happy, healthy, playful and they are a joy to all.<br/>
 <h5><a name="dr">Devon Rex</a></h5>
@@ -95,7 +90,7 @@ The Devon Rex is a faithful companion and will usually follow the object of thei
 <table>
 <tr style="background-color:#333; font-size:15px; height:15px">
 
-<!-- anchor to top of page --> 
+<!-- anchor to top of page -->
 <td>&copy; 2012 Celtic Elfes</td>
 <td>
 <a href="mailto:info@celticelfes.com?Subject=Devon%20Rex">
