Fixed footers, updated males and females, resized main picture for lola

--- a/females.html
+++ b/females.html
@@ -11,72 +11,35 @@
 <script src="js/jquery-1.8.3.min.js" type="text/javascript"></script>
 <script type="text/javascript">
 $(function() {
-    $("img#panic_thumb1")
-        .mouseover(function() {
-            $("img#panic_main").attr("src", "males/panic1.jpg");
-        })
-        .mouseout(function() {
-            $("img#panic_main").attr("src", "males/panic2.jpg");
-        });
-    $("img#panic_thumb2")
-        .mouseover(function() {
-            $("img#panic_main").attr("src", "males/panic_for_m.jpg");
-        })
-        .mouseout(function() {
-            $("img#panic_main").attr("src", "males/panic2.jpg");
-        });
-    $("img#panic_thumb3")
-        .mouseover(function() {
-            $("img#panic_main").attr("src", "males/panic5.jpg");
-        })
-        .mouseout(function() {
-            $("img#panic_main").attr("src", "males/panic2.jpg");
-        });
+    $("img#hanna_thumb1")
+        .mouseover(function() { $("img#hanna_main").attr("src", "females/hanna1.jpg"); })
+        .mouseout(function() { $("img#hanna_main").attr("src", "females/hanna_for_females.jpg"); });
+    $("img#hanna_thumb2")
+        .mouseover(function() { $("img#hanna_main").attr("src", "females/hanna_2.jpg"); })
+        .mouseout(function() { $("img#hanna_main").attr("src", "females/hanna_for_females.jpg"); });
+    $("img#hanna_thumb3")
+        .mouseover(function() { $("img#hanna_main").attr("src", "females/hanna_3.jpg"); })
+        .mouseout(function() { $("img#hanna_main").attr("src", "females/hanna_for_females.jpg"); });
 
-    $("img#eclare_thumb1")
-        .mouseover(function() {
-            $("img#eclare_main").attr("src", "males/eclare2.jpg");
-        })
-        .mouseout(function() {
-            $("img#eclare_main").attr("src", "males/eclare1.jpg");
-        });
-    $("img#eclare_thumb2")
-        .mouseover(function() {
-            $("img#eclare_main").attr("src", "males/eclare3.jpg");
-        })
-        .mouseout(function() {
-            $("img#eclare_main").attr("src", "males/eclare1.jpg");
-        });
-    $("img#eclare_thumb3")
-        .mouseover(function() {
-            $("img#eclare_main").attr("src", "males/eclar4.jpg");
-        })
-        .mouseout(function() {
-            $("img#eclare_main").attr("src", "males/eclare1.jpg");
-        });
+    $("img#nina_thumb1")
+        .mouseover(function() { $("img#nina_main").attr("src", "females/nina2.jpg"); })
+        .mouseout(function() { $("img#nina_main").attr("src", "females/nina_for_females.jpg"); });
+    $("img#nina_thumb2")
+        .mouseover(function() { $("img#nina_main").attr("src", "females/nina3.jpg"); })
+        .mouseout(function() { $("img#nina_main").attr("src", "females/nina_for_females.jpg"); });
+    $("img#nina_thumb3")
+        .mouseover(function() { $("img#nina_main").attr("src", "females/nina4.jpg"); })
+        .mouseout(function() { $("img#nina_main").attr("src", "females/nina_for_females.jpg"); });
 
-
-    $("img#flash_thumb1")
-        .mouseover(function() {
-            $("img#flash_main").attr("src", "males/flash_1.jpg");
-        })
-        .mouseout(function() {
-            $("img#flash_main").attr("src", "males/flash_for_males.jpg");
-        });
-    $("img#flash_thumb2")
-        .mouseover(function() {
-            $("img#flash_main").attr("src", "males/flash_2.jpg");
-        })
-        .mouseout(function() {
-            $("img#flash_main").attr("src", "males/flash_for_males.jpg");
-        });
-    $("img#flash_thumb3")
-        .mouseover(function() {
-            $("img#flash_main").attr("src", "males/flash_3.jpg");
-        })
-        .mouseout(function() {
-            $("img#flash_main").attr("src", "males/flash_for_males.jpg");
-        });
+    $("img#lola_thumb1")
+        .mouseover(function() { $("img#lola_main").attr("src", "females/lola1.jpg"); })
+        .mouseout(function() { $("img#lola_main").attr("src", "females/lola_for_females.jpg"); });
+    $("img#lola_thumb2")
+        .mouseover(function() { $("img#lola_main").attr("src", "females/lola2.jpg"); })
+        .mouseout(function() { $("img#lola_main").attr("src", "females/lola_for_females.jpg"); });
+    $("img#lola_thumb3")
+        .mouseover(function() { $("img#lola_main").attr("src", "females/lola4.jpg"); })
+        .mouseout(function() { $("img#lola_main").attr("src", "females/lola_for_females.jpg"); });
 });
 </script>
 <script type="text/javascript">
@@ -119,68 +82,66 @@ $(function() {
 
 <div id="content">
 
-<div class="cat">
+<div id="hanna" class="cat">
 	<div class="gallery">
-		<img id="panic_main" src="males/panic2.jpg" />
+		<img id="hanna_main" src="females/hanna_for_females.jpg" />
 		<ul>
-			<li><img id="panic_thumb1" src="males/panic1_s.jpg" /></li>
-			<li><img id="panic_thumb2" src="males/panic_4m_s.jpg" /></li>
-			<li><img id="panic_thumb3" src="males/panic5_s.jpg" /></li>
+			<li><img id="hanna_thumb1" src="females/hanna1_s.jpg" /></li>
+			<li><img id="hanna_thumb2" src="females/hanna_2_s.jpg" /></li>
+			<li><img id="hanna_thumb3" src="females/hanna_3_s.jpg" /></li>
 		</ul>
 	</div>
 	<div class="bio">
-		<h1>Panic</h1>
+		<h1>"Hanna" ROGUS Bessie Basse</h1>
 		<ul>
-			<li><span class="label">Sire:</span> Alexandroff Phocus-Pocus</li>
-			<li><span class="label">Dam:</span> Bijou Arnikor*PL </li>
-			<li><span class="label">DoB:</span> 2 Oct 2010</li>
-			<li><span class="label">Color:</span>  Red Bi-Colour</li>
-			<li><span class="label">Blood Type:</span> B</li>
+			<li><span class="label">Sire:</span> Rogus Willybonka</li>
+			<li><span class="label">Dam:</span> Rexintons She Bangz </li>
+			<li><span class="label">DoB:</span> 13 Mar 2011</li>
+			<li><span class="label">Color:</span> Cream</li>
+			<li><span class="label">Blood Type:</span></li>
 		</ul>
-		</div>
-</div>
-
-<div class="cat">
-	<div class="gallery">
-		<img id="eclare_main" src="males/eclare1.jpg" />
-		<ul>
-			<li><img id="eclare_thumb1" src="males/eclare2_s.jpg" /></li>
-			<li><img id="eclare_thumb2" src="males/eclare3_S.jpg" /></li>
-			<li><img id="eclare_thumb3" src="males/eclar4S.jpg" /></li>
-		</ul>
-	</div>
-	<div class="bio">
-		<h1>Eclare</h1>
-		<ul>
-			<li><span class="label">Father:</span> <a href="#panic">PL Agubamka Domalien (Panic)</a></li>
-			<li><span class="label">Mother:</span> </li>
-			<li><span class="label">DoB:</span> </li>
-			<li><span class="label">Color:</span>  Black Smoke</li>
-			<li><span class="label">Blood Type:</span> </li>
-		</ul>
-		<h2>Litters</h2>
 	</div>
 </div>
 
-<div class="cat">
+<div id="nina" class="cat">
 	<div class="gallery">
-		<img id="flash_main" src="males/flash_for_males.jpg" />
+		<img id="nina_main" src="females/nina_for_females.jpg" />
 		<ul>
-			<li><img id="flash_thumb1" src="males/flash_1_s.jpg" /></li>
-			<li><img id="flash_thumb2" src="males/flash_2_s.jpg" /></li>
-			<li><img id="flash_thumb3" src="males/flash_3s.jpg" /></li>
+			<li><img id="nina_thumb1" src="females/nina2_S.jpg" /></li>
+			<li><img id="nina_thumb2" src="females/nina3_s.jpg" /></li>
+			<li><img id="nina_thumb3" src="females/nina4S.jpg" /></li>
 		</ul>
 	</div>
 	<div class="bio">
-		<h1>Flash</h1>
+		<h1>"Nina" Rogus Mamma Cass</h1>
 		<ul>
-			<li><span class="label">Father:</span> <a href="#panic">PL Agubamka Domalien (Panic)</a></li>
-			<li><span class="label">Mother:</span> </li>
-			<li><span class="label">DoB:</span> </li>
-			<li><span class="label">Color:</span>  Black Smoke</li>
+			<li><span class="label">Father:</span> Rexellence Willy-Ornot/li>
+			<li><span class="label">Mother:</span> Rogus Rosy Poppet</li>
+			<li><span class="label">DoB:</span> 01 Apr 2011</li>
+			<li><span class="label">Color:</span> Black Smoke</li>
+			<li><span class="label">Blood Type:</span></li>
+		</ul>
+	</div>
+</div>
+
+<div id="lola" class="cat">
+	<div class="gallery">
+		<img id="lola_main" src="females/lola_for_females.jpg" />
+		<ul>
+			<li><img id="lola_thumb1" src="females/lola1S.jpg" /></li>
+			<li><img id="lola_thumb2" src="females/lola2_s.jpg" /></li>
+			<li><img id="lola_thumb3" src="females/lola4S.jpg" /></li>
+		</ul>
+	</div>
+	<div class="bio">
+		<h1>"Lola" Rogus Maggie-May</h1>
+		<ul>
+			<li><span class="label">Father:</span> Rogus Willybonka</li>
+			<li><span class="label">Mother:</span> Rexintons She Bangz</li>
+			<li><span class="label">DoB:</span> 13 Mar 2011</li>
+			<li><span class="label">Color:</span> Crea-white</li>
 			<li><span class="label">Blood Type:</span> </li>
 		</ul>
-		<h2>Litters</h2>
 	</div>
 </div>
 
@@ -191,13 +152,13 @@ $(function() {
 <tr style="background-color:#333; font-size:15px; height:17px">
 
 <!-- anchor to top of page -->
-<td>&copy; Celtic Elfes</td>
+<td>&copy; 2012 	Celtic Elfes</td>
 <td>
 <a href="http://www.facebook.com/#!/lastauskiene?fref=ts" target="_blank">
 <img border="0" src="images/fb.jpg" alt="FB" width="32" height="32" />
 </a>
 </td>
-<td>Designed by alien_masha</td>
+<td align="right">Designed by alien_masha</td>
 </tr>
 
 </table>
