--- a/kittens.html
+++ b/kittens.html
@@ -60,13 +60,13 @@ color is nice, and two eyes</p>
 <tr style="background-color:#333; font-size:10px; height:15px">
 
 <!-- anchor to top of page -->
-<td>&copy; Celtic Elfes</td>
+<td>&copy; 2012 Celtic Elfes</td>
 <td>
 <a href="http://www.facebook.com/#!/lastauskiene?fref=ts" target="_blank">
 <img border="0" src="fb.jpg" alt="FB" width="32" height="32" />
 </a>
 </td>
-<td>Designed by alien_masha</td>
+<td align="right">Designed by alien_masha</td>
 </tr>
 
 </table>
