--- a/gallery.html
+++ b/gallery.html
@@ -68,14 +68,14 @@ catcat cat catcat cat catcat cat catcat cat cat 10.10.2010</p>
 <tr style="background-color:#333; font-size:10px; height:15px">
 
 <!-- anchor to top of page -->
-<td>&copy; Celtic Elfes</td>
+<td>&copy; 2012 Celtic Elfes</td>
 <td>No border around the image, but still a link:
 <a href="http://www.facebook.com/#!/lastauskiene?fref=ts">
 <img border="0" src="fb.jpg" alt="FB" width="32" height="32"></a>
 
 </td>
 <!--fb button-->
-<td>Designed by alien_masha</td>
+<td align="right">Designed by alien_masha</td>
 </tr>
 
 </table>
