Corrected Sire and Dam labels

--- a/females.html
+++ b/females.html
@@ -115,8 +115,8 @@ $(function() {
 	<div class="bio">
 		<h1>"Nina" Rogus Mamma Cass</h1>
 		<ul>
-			<li><span class="label">Father:</span> Rexellence Willy-Ornot/li>
-			<li><span class="label">Mother:</span> Rogus Rosy Poppet</li>
+			<li><span class="label">Sire:</span> Rexellence Willy-Ornot/li>
+			<li><span class="label">Dam:</span> Rogus Rosy Poppet</li>
 			<li><span class="label">DoB:</span> 01 Apr 2011</li>
 			<li><span class="label">Color:</span> Black Smoke</li>
 			<li><span class="label">Blood Type:</span></li>
