--- a/males.html
+++ b/males.html
@@ -116,8 +116,8 @@ $(function() {
 	<div class="bio">
 		<h1>Celticelfes Eclaire</h1>
 		<ul>
-			<li><span class="label">Father:</span> <a href="#panek">PL* Agubamka Domalien (Panek)</a></li>
-			<li><span class="label">Mother:</span> <a href="females.html#hanna">Rogus Bessie Basset (Hanna)</a> </li>
+			<li><span class="label">Sire:</span> <a href="#panek">PL* Agubamka Domalien (Panek)</a></li>
+			<li><span class="label">Dam:</span> <a href="females.html#hanna">Rogus Bessie Basset (Hanna)</a> </li>
 			<li><span class="label">DoB:</span>07 June 2012</li>
 			<li><span class="label">Color:</span> Red Bi-color</li>
 			<li><span class="label">Blood Type:</span>B </li>
@@ -137,8 +137,8 @@ $(function() {
 	<div class="bio">
 		<h1>Flash</h1>
 		<ul
-			<li><span class="label">Father:</span> <a href="#panek">PL* Agubamka Domalien (Panek)</a></li>
-			<li><span class="label">Mother:</span> <a href="females.html#nina">"Nina" Rogus Mamma Cass</a></li>
+			<li><span class="label">Sire:</span> <a href="#panek">PL* Agubamka Domalien (Panek)</a></li>
+			<li><span class="label">Dam:</span> <a href="females.html#nina">"Nina" Rogus Mamma Cass</a></li>
 			<li><span class="label">DoB:</span> 21 Jun 2012</li>
 			<li><span class="label">Color:</span> Black Smoke</li>
 			<li><span class="label">Blood Type:</span> </li>
